<resources>
    <string name="app_name">GeoNotes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amount_notes">Amount notes: %d</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="change_color">Change color</string>
    <string name="date">Date:</string>
    <string name="change_date">Change date</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="change_coordinates_on_the_map">Change coordinates on the map</string>
    <string name="geo_note_text">Geo note text</string>

    <string name="note_details_mode_insert_header">New note</string>
    <string name="note_details_mode_update_header">Edit note</string>

</resources>